--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,21 @@ input.form, textarea {
     background-color: aqua;
     height: 40px;
 }
+.message {
+    margin-top: 20px;
+    padding: 10px;
+    background-color: lightcoral;
+    display: none;
+}
+.message.success {
+    background-color: lightgreen;
+    display: block;
+}
+
+.message.danger {
+    background-color: lightcoral;
+    display: block;
+}
 
 @media screen and (max-width: 768px) {
     .flex {
